src/styles.scss
@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Barlow+Condensed:wght@600;700&display=swap");

:root {
  --c-primary: #32c771;
  --c-secondary: #333333;
  --c-tertiary: #262626;
  --c-fourth: #161616;
  --c-white: #ffffff;
  --c-black: #000000;
}
* {
  font-family:
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    "Segoe UI",
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    "Open Sans",
    "Helvetica Neue",
    sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html {
  scroll-behavior: smooth;
}
h1,
h2,
h3,
h4,
h5,
p,
label {
  color: var(--c-white);
}
html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
  background: var(--c-black);
  overflow: hidden;
  word-wrap: break-word;
}

button {
  color: inherit;
  text-decoration: none;
}

